--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>MUSIC 163</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- <link rel="shortcut icon" href="favicon.ico" /> -->
+    <script src="//unpkg.com/vue-ydui/dist/ydui.flexible.js"></script>
     <link href="https://unpkg.com/animate.css@3.5.1/animate.min.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.min.js"></script>
